Set overflow:hidden to prevent text wraping over video
Without overflow:hidden, if the window is narrowed th text below
the video shows OVER the video, making a mess.

--- a/css/embedvideo.css
+++ b/css/embedvideo.css
@@ -1,3 +1,7 @@
+div.embedvideo {
+	overflow: hidden;
+}
+
 div.tcenter.embedvideo,
 div.embedvideo.ev_center  {
 	text-align: center;
